# spatialscope-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GIT_WORKFLOW.md  GRADING_GUIDE.md  LICENSE  PRODUCT_BRIEF.md  PROJECT_PLAN.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  V2_MIGRATION.md  V6_VISUAL_REVIEW.md  app.py  cli.py  environment-squidpy.yml  environment.yml  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml  secrets.example.toml
assets/: site.css
data/: README.md
docs/: AGENT_DESIGN_REFERENCES.md  DEMO_SCRIPT.md  GIT_WORKFLOW.md  PRESENTATION_WALKTHROUGH.md  PRODUCT_BRIEF.md  REFERENCE_AUDIT.md  SUBMISSION_CHECKLIST.md  V2_ARCHITECTURE.md  V2_GAP_AUDIT.md  V2_REFACTOR_PLAN.md  index.html
docs/assets/: site.css
examples/: demo_config.yaml  demo_queries.md
reports/: SPATIALSCOPE_FINAL_REPORT_DRAFT.md  SpatialScope_Agent_Presentation.pptx
reports/final_latex/: spatialscope_final_report.tex
scripts/: check_project.sh  create_demo_data.py  download_real_demo.sh  generate_landing_preview.py  run_app.sh  run_demo.sh
spatialscope/: __init__.py
spatialscope/agent/: graph.py  llm.py  planner.py  repair.py  runtime.py  schemas.py  state.py
spatialscope/domain/: __init__.py  dataset_profile.py  dataset_store.py  evidence.py  exploration_evidence.py  (+2 more)
tests/: test_agent_audit.py  test_annotation_tools.py  test_artifact_audit.py  test_bundle.py  test_cli.py  test_dataset_card.py  test_dataset_store.py  test_demo.py  test_gene_matching.py  test_json_utils.py  test_llm_gateway.py  test_llm_status.py  test_paths.py  test_planner.py  test_quality.py  test_registry.py  test_repair.py  test_replay.py  test_report_tools.py  test_review.py  test_run_index.py  test_runtime_v2.py  test_schemas.py  test_spatial_coordinate_aliases.py  test_storyboard.py  test_ui_v2.py  test_v3_evidence.py  test_v5_workspace.py  test_v6_surface.py  test_v7_visual_rhythm.py  test_visual_priority.py
(+61 files in other folders)
